Atualizei arquivo fundo001

--- a/ex022/fundo001.html
+++ b/ex022/fundo001.html
@@ -6,7 +6,9 @@
     <title>Teste de Imagem de Fundo</title>
     <style>
         body {
-            background-image: url('imagens/pattern004.png');
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            background-size: 100px 100px;
+            background-repeat: ;
         }
         div.quadrado {
             border: 1px solid black;
