--- a/ex022/fundo001.html
+++ b/ex022/fundo001.html
@@ -6,26 +6,30 @@
     <title>Teste de Imagem de Fundo</title>
     <style>
         body {
+            height: 100%vh;
+            border: 1px dashed black;
             background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
             background-size: 100px 100px;
-            background-repeat: ;
+            background-repeat: no-repeat;
         }
         div.quadrado {
             border: 1px solid black;
             border-radius: 20px;
-            width: 250px;
-            height: 250px;
-            display: inline-block;
-            background-color: lightblue;
+            height: 160px;
+            background-image: url('imagens/wallpaper002.jpg');
+            margin: 10px;
         }
         div#q1 {
-            background-color: antiquewhite;
+            background-position: left top;
         }
         div#q2 {
-            background-image: linear-gradient(to bottom, yellow, orange);
+            background-position: left center;
         }
         div#q3 {
-            background-image: url('imagens/pattern003.png');
+            background-position: right bottom;
+        }
+        div#q4 {
+            background-position: center center;
         }
 
     </style>
@@ -38,6 +42,9 @@
 
 </div>
 <div class="quadrado" id="q3">
+
+</div>
+<div class="quadrado" id="q4">
 
 </div>
 </body>
