--- a/projeto redes sociais/index.html
+++ b/projeto redes sociais/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto redes sociais</title>
+    <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
+        <section id="redesSociais">
+
+        </section>
+    </main>
 </body>
 </html>
