--- a/projeto redes sociais Paty/index.html
+++ b/projeto redes sociais Paty/index.html
@@ -14,11 +14,9 @@
         </section>
         <section id="redesSociais">
             <a href="home.html" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-linkedin.png" alt="linkedin"></a><br>
             <a href="github.html" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="github"></a><br>
             <a href="intagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="instagram"></a><br>
-            <a href="twitter.html" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="twitter">
-            </a><br>
             <a href="facebook.html" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="facebook"></a>
             
         </section>
