--- a/projeto redes sociais Paty/facebook.html
+++ b/projeto redes sociais Paty/facebook.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="pacote-d013/imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/groups/1520234831617060/?locale=pt_BR" target="_blank">Acesse</a>
+    <img src="imagens paty/TelaFacebook.jpg" alt="Facebook">
+    <a href="https://www.facebook.com/pgrings/?locale=pt_BR" target="_blank">Acesse</a>
 </body>
 </html>
