--- a/projeto redes sociais Paty/github.html
+++ b/projeto redes sociais Paty/github.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="pacote-d013/imagens/tela-github.jpg" alt="GitHub">
-    <a href="https://gustavoguanabara.github.io/" target="_blank">Acesse</a>
+    <img src="imagens paty/TelaGitHub.jpg" alt="GitHub">
+    <a href="https://github.com/PatriciaGrings" target="_blank">Acesse</a>
 </body>
 </html>
