--- a/projeto redes sociais Paty/intagram.html
+++ b/projeto redes sociais Paty/intagram.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="pacote-d013/imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">Acesse</a>
+    <img src="imagens paty/TelaInstagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/patriciagrings?igsh=MThvcm43YW13cGlicw==" target="_blank">Acesse</a>
 </body>
 </html>
