--- a/projeto redes sociais Paty/linkedin.html
+++ b/projeto redes sociais Paty/linkedin.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
+    <title>Linkedin</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 
 <body>
-    <img src="pacote-d013/imagens/tela-youtube.png" alt="YouTube">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">Acesse</a>
+    <img src="imagens paty/TelaLinkedIn.jpg" alt="Linkedin">
+    <a href="https://www.linkedin.com/feed/" target="_blank">Acesse</a>
 </body>
 </html>
