--- a/ex028/index.html
+++ b/ex028/index.html
@@ -12,10 +12,32 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php" autocomplete="off" method="post">
-        <p><label for="inome">Nome: </label><input type="text" name="nome" id="inome"></p>
-        <p><label for="isobrenome">Sobrenome: </label><input type="text" name="sobrenome" id="isobrenome"></p>
-        <p><input type="submit" value="Enviar"></p>
+    <form action="cadastro.php" autocomplete="on" method="post">
+        <p>
+            <label for="inome">Nome: </label>
+            <input type="text" name="nome" id="inome" autocomplete="name" placeholder="Nome" required>
+        </p>
+        <p>
+            <label for="isobrenome">Sobrenome: </label>
+            <input type="text" name="sobrenome" id="isobrenome" autocomplete="family-name" placeholder="Sobrenome" required>
+        </p>
+        <P>
+            <label for="inota">Nota:</label>
+            <input type="number" name="nota" id="inota" min="0" max="10" step="0.1" required>
+        </P>
+        <p>
+            <label for="imes">Período Letivo: </label>
+            <input type="month" name="mes" id="imes" required>
+        </p>
+        <p>
+            <label for="ihora">Horário da Prova:</label>
+            <input type="time" name="hora" id="ihora" required>
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+
     </form>
 </body>
 </html>
