--- a/ex030/flexbox001/index.html
+++ b/ex030/flexbox001/index.html
@@ -8,29 +8,41 @@
         div.conteiner {
             background-color: lightcoral;
             display: flex;
-            height: 200px;
-            justify-content: space-evenly;
+            height: 400px;
+            flex-flow: row nowrap;
             align-items: center;
-
         }
 
         div.item {
             background-color: lightblue;
             border: 1px solid black;
             text-align: center;
-            padding: 10px;
+            padding: 40px;
+            flex-basis: 150px;
+        }
+
+        div#i3 {
+            align-self: flex-end;
+        }
+
+        div#i5 {
+            align-self: flex-start;
+        }
+
+        div#i7 {
+            align-self: stretch;
         }
     </style>
 </head>
 <body>
     <div class="conteiner">
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
-        <div class="item">D</div>
-        <div class="item">E</div>
-        <div class="item">F</div>
-        <div class="item">G</div>
+        <div id="i1" class="item">A</div>
+        <div id="i2" class="item">Outro conteúdo</div>
+        <div id="i3" class="item">C</div>
+        <div id="i4" class="item">Conteúdo um pouco maior</div>
+        <div id="i5" class="item">E</div>
+        <div id="i6" class="item">Conteúdo maior ainda, que vai ocupar mais espaço</div>
+        <div id="i7" class="item">G</div>
     </div>
 </body>
 </html>
